crates/keron-lang/tests/corpus/errors/check/map_boolean_key_rejected.keron
val flags: Map<Boolean, String> = {true: "on", false: "off"}
